resources/css/custom-carousel.css
/* custom styling of dots and controls for carousel */

.tns-outer {
    position: relative;
}
.tns-nav {
    position: absolute;
    bottom: 5%;
    text-align: center;
    width: 100%;
}
.tns-nav > [aria-controls] {
    width: 9px;
    height: 9px;
    padding: 0;
    margin: 0 5px;
    transform: rotate(-45deg);
    background: var(--cool-gray);
    display: table-cell;
    border: 1px solid var(--gray);
}
.tns-nav>.tns-nav-active {
    background: var(--p-color);
    border: 1px solid var(--black);
}
.tns-nav>.tns-nav-active:focus {
    outline: var(--p-color) auto 1px;
}

/* Carousel Arrows */
/* Adapted from Slick css*/
.carousel-prev, .carousel-next {
    position: absolute;
    display: block;
    height: 20px;
    width: 20px;
    line-height: 0;
    font-size: 0;
    cursor: pointer;
    background: transparent;
    color: transparent;
    top: 50%;
    margin-top: -10px;
    padding: 0;
    border: none;
    outline: none;
}

.carousel-prev:hover, .carousel-prev:focus, .carousel-next:hover, .carousel-next:focus {
    outline: none;
    background: transparent;
    color: transparent;
}

.carousel-prev:hover:before, .carousel-prev:focus:before, .carousel-next:hover:before, .carousel-next:focus:before {
    opacity: 1;
}

.carousel-prev.carousel-disabled:before, .carousel-next.carousel-disabled:before {
    opacity: 0.25;
}

.carousel-prev:before, .carousel-next:before {
    font-family: "carousel";
    font-size: 20px;
    line-height: 1;
    color: white;
    opacity: 0.75;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.carousel-prev {
    left: -25px;
}

[dir="rtl"] .carousel-prev {
    left: auto;
    right: -25px;
}

.carousel-prev:before {
    content: "←";
}

[dir="rtl"] .carousel-prev:before {
    content: "→";
}

.carousel-next {
    right: -25px;
}

[dir="rtl"] .carousel-next {
    left: -25px;
    right: auto;
}

.carousel-next:before {
    content: "→";
}

[dir="rtl"] .carousel-next:before {
    content: "←";
}


.carousel-prev {
    left: 0;
    z-index: 2;
}

.carousel-next {
    right: 0;
}

.carousel-next,
.carousel-prev {
    margin-top: -25px;
}

.carousel-arrow {
    height: 50px;
    width: 50px;
}
.carousel-prev, .carousel-next, .carousel-prev:hover, .carousel-prev:focus, .carousel-next:hover, .carousel-next:focus  {
    background-image: url("/images/icons/carousel-arrow.svg");
    background-repeat: no-repeat;
    background-position: center;
}

.carousel-prev:before,
.carousel-next:before {
    color: var(--gray);
    font-family: sans-serif;
    content: "";
}
.carousel-prev {
    transform: rotate(180deg);
}

.carousel-disabled {
    visibility: hidden;
}

:root {
    --white:       #FFFFFF;
    --black:       #000000;
    --gray:        #cccccc;
    --p-color:     #4427C1;
    --cool-gray:   #eeefef;
}

